# uav-control

./: CMakeLists.txt  README.md  main.cpp  tcp_client.py  tcp_server.py
examples/: main.cpp
include/: NetworkClient.h
src/: NetworkClient.cpp
utils/: CLinuxTCPCom.cpp  CLinuxTCPCom.h
